Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long BASEADDR;
typedef unsigned long LISTADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
/**
*
*  BTI429 Driver functions.
*
**/

BTI429API ULONG __stdcall BTI429_BCDGetData(ULONG msg,USHORT msb,USHORT lsb);
BTI429API ULONG __stdcall BTI429_BCDGetMant(ULONG msg,USHORT sigdig);
BTI429API USHORT __stdcall BTI429_BCDGetSign(ULONG msg);
BTI429API USHORT __stdcall BTI429_BCDGetSSM(ULONG msg);
BTI429API ULONG __stdcall BTI429_BCDPutData(ULONG msg,ULONG value,USHORT msb,USHORT lsb);
BTI429API ULONG __stdcall BTI429_BCDPutMant(ULONG msg,ULONG value,USHORT sigdig,USHORT sign);
BTI429API ULONG __stdcall BTI429_BCDPutSign(ULONG msg,USHORT sign);
BTI429API ULONG __stdcall BTI429_BCDPutSSM(ULONG msg,USHORT value);
BTI429API ULONG __stdcall BTI429_BNRGetData(ULONG msg,USHORT msb,USHORT lsb);
BTI429API ULONG __stdcall BTI429_BNRGetMant(ULONG msg,USHORT sigbit);
BTI429API USHORT __stdcall BTI429_BNRGetSign(ULONG msg);
BTI429API USHORT __stdcall BTI429_BNRGetSSM(ULONG msg);
BTI429API ULONG __stdcall BTI429_BNRPutData(ULONG msg,ULONG value,USHORT msb,USHORT lsb);
BTI429API ULONG __stdcall BTI429_BNRPutMant(ULONG msg,ULONG value,USHORT sigbit,USHORT twos);
BTI429API ULONG __stdcall BTI429_BNRPutSign(ULONG msg,USHORT twos);
BTI429API ULONG __stdcall BTI429_BNRPutSSM(ULONG msg,USHORT value);
BTI429API ERRVAL __stdcall BTI429_ChClear(INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ChConfig(ULONG configval,INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_ChGetCount(LPINT rcvcount,LPINT xmtcount,HCORE handleval);
BTI429API ULONG __stdcall BTI429_ChGetInfo(USHORT infotype,INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_ChIs429(INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_ChIsRcv(INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_ChIsXmt(INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_ChPause(INT channum,HCORE handleval);
BTI429API INT __stdcall BTI429_ChPauseCheck(INT channum,HCORE handleval);
BTI429API VOID __stdcall BTI429_ChResume(INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_ChStart(INT channum,HCORE handleval);
BTI429API BOOL __stdcall BTI429_ChStop(INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ChSyncDefine(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_ChTriggerDefine(BOOL enableflag,USHORT trigmask,USHORT trigval,USHORT pinpolarity,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_FilterClear(BASEADDR baseaddr,HCORE handleval);
BTI429API MSGADDR __stdcall BTI429_FilterDefault(ULONG configval,INT channum,HCORE handleval);
BTI429API MSGADDR __stdcall BTI429_FilterRd(INT labelval,INT sdival,INT channum,HCORE handleval);
BTI429API MSGADDR __stdcall BTI429_FilterSet(ULONG configval,INT labelval,INT sdimask,INT channum,HCORE handleval);
BTI429API ERRVAL __stdcall BTI429_FilterWr(MSGADDR msgaddr,INT labelval,INT sdival,INT channum,HCORE handleval);
BTI429API ULONG __stdcall BTI429_FldGetData(ULONG msgval);
BTI429API USHORT __stdcall BTI429_FldGetLabel(ULONG msgval);
BTI429API USHORT __stdcall BTI429_FldGetParity(ULONG msgval);
BTI429API USHORT __stdcall BTI429_FldGetSDI(ULONG msgval);
BTI429API ULONG __stdcall BTI429_FldGetValue(ULONG msgval,USHORT startbit,USHORT endbit);
BTI429API ULONG __stdcall BTI429_FldPutData(ULONG msgval,ULONG data);
BTI429API ULONG __stdcall BTI429_FldPutLabel(ULONG msgval,USHORT label);
BTI429API ULONG __stdcall BTI429_FldPutSDI(ULONG msgval,USHORT sdi);
BTI429API ULONG __stdcall BTI429_FldPutValue(ULONG msgval,ULONG dataval,USHORT startbit,USHORT endbit);
BTI429API LISTADDR __stdcall BTI429_ListAsyncCreate(ULONG listconfigval,INT count,INT channum,HCORE handleval);
/**
*
*  Internal functions used by the BTI429 Driver.
*
**/

BTI429API VOID __stdcall BTI429_BCDGetVal(LPSTR buf,ULONG msg,USHORT sigdig,LPCSTR resolstr);
BTI429API ULONG __stdcall BTI429_BCDPutVal(LPCSTR buf,ULONG msg,USHORT sigdig,LPCSTR resolstr);
BTI429API VOID __stdcall BTI429_BNRGetVal(LPSTR buf,ULONG msg,USHORT sigbit,LPCSTR resolstr);
BTI429API ULONG __stdcall BTI429_BNRPutVal(LPCSTR buf,ULONG msg,USHORT sigbit,LPCSTR resolstr);