Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429NET.CS


        private static class BTI429_64
        {
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDGetData", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDGetData(UInt32 msg, UInt16 msb, UInt16 lsb);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDGetMant", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDGetMant(UInt32 msg, UInt16 sigdig);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDGetSign", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_BCDGetSign(UInt32 msg);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDGetSSM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_BCDGetSSM(UInt32 msg);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDGetVal", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_BCDGetVal(ref string buf, UInt32 msg, UInt16 sigdig, ref string resolstr);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDPutData", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutData(UInt32 msg, UInt32 value, UInt16 msb, UInt16 lsb);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDPutMant", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutMant(UInt32 msg, UInt32 value, UInt16 sigdig, UInt16 sign);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDPutSign", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutSign(UInt32 msg, UInt16 sign);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDPutSSM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutSSM(UInt32 msg, UInt16 value);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BCDPutVal", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutVal(ref string buf, UInt32 msg, UInt16 sigdig, ref string resolstr);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRGetData", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRGetData(UInt32 msg, UInt16 msb, UInt16 lsb);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRGetMant", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRGetMant(UInt32 msg, UInt16 sigbit);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRGetSign", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_BNRGetSign(UInt32 msg);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRGetSSM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_BNRGetSSM(UInt32 msg);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRGetVal", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_BNRGetVal(ref string buf, UInt32 msg, UInt16 sigbit, ref string resolstr);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRPutData", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutData(UInt32 msg, UInt32 value, UInt16 msb, UInt16 lsb);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRPutMant", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutMant(UInt32 msg, UInt32 value, UInt16 sigbit, UInt16 twos);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRPutSign", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutSign(UInt32 msg, UInt16 twos);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRPutSSM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutSSM(UInt32 msg, UInt16 value);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_BNRPutVal", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutVal(ref string buf, UInt32 msg, UInt16 sigbit, ref string resolstr);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChClear", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChClear(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChGetCount", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ChGetCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChGetInfo", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChIs429", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChIs429(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChIsRcv", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChIsRcv(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChIsXmt", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChIsXmt(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChPause", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ChPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChPauseCheck", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChResume", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ChResume(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChStart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChStart(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChStop", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChStop(Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChSyncDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ChTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FilterClear", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_FilterClear(UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FilterDefault", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FilterDefault(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FilterRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FilterRd(Int32 labelval, Int32 sdival, Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FilterSet", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FilterSet(UInt32 configval, Int32 labelval, Int32 sdimask, Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FilterWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_FilterWr(UInt32 msgaddr, Int32 labelval, Int32 sdival, Int32 channum, IntPtr handleval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldGetData", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldGetData(UInt32 msgval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldGetLabel", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_FldGetLabel(UInt32 msgval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldGetParity", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_FldGetParity(UInt32 msgval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldGetSDI", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_FldGetSDI(UInt32 msgval);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldGetValue", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldGetValue(UInt32 msgval, UInt16 startbit, UInt16 endbit);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldPutData", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutData(UInt32 msgval, UInt32 data);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldPutLabel", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutLabel(UInt32 msgval, UInt16 label);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldPutSDI", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutSDI(UInt32 msgval, UInt16 sdi);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_FldPutValue", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutValue(UInt32 msgval, UInt32 dataval, UInt16 startbit, UInt16 endbit);
            [DllImport("BTI42964.DLL", EntryPoint = "BTI429_ListAsyncCreate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListAsyncCreate(UInt32 listconfigval, Int32 count, Int32 channum, IntPtr handleval);
